Majors changes. Added scalability with enums to allow multiple armor sets. Rewrote multiple methods. Need player heads next.